<resources>
    <string name="app_name">广西科技馆</string>
    <!-- 用户类型-->
    <!-- 语种-->
    <!--设置-->
    <string name='set'>设置</string>
    <string name='auto_guide'>自动讲解定位</string>
    <string name='res_download'>资源下载</string>
    <string name='version_info'>版本信息</string>
    <string name='lang_select'>语种选择</string>
    <string name='delete_res'>清除资源</string>
    <string name='user_choose'>用户选择</string>
    <!--攻略-->
    <string name='raider_ticket'>票务信息</string>
    <string name='raider_peer'>我的同伴</string>
    <string name='raider_route'>交通路线</string>
    <string name='raider_theme'>主题活动</string>
    <string name='raider_time'>开闭馆时间</string>
    <string name='raider_service'>意见反馈</string>
    <!--扫一扫-->
    <string name='txt_scan'>扫一扫</string>
    <string name="scan_tip">把二维码放入框内，即可自动扫描</string>

    <string name='close'>关闭</string>
    <string name='submit'>确定</string>
    <string name="cancel">取消</string>
    <string name='query_hint'>请输入展品名称或编号</string>
    <string name='warm_tip'>温馨提示</string>
    <string name='waiting'>请稍候…</string>
    <string name='loading'>加载中…</string>
    <string name='tui_jian_index'>推荐指数</string>
    <string name='group_create'>创建导览群组</string>
    <string name='group_join'>加入导览群组</string>
    <string name='group_smart_service_online'>智慧服务在线</string>
    <string name='group_nickname'>昵称：</string>
    <string name='group_id'>ID：</string>
    <string name="group_no">所在组群：</string>
    <string name="group_create_succeed">创建群组成功</string>
    <string name='net_not_available'>网络不可用，请在设置中打开网络连接！</string>
    <string name='initializing'>初始化中...</string>
    <string name='init_failed'>初始化失败，是否重试？</string>
    <string name='retry'>重试</string>
    <string name='download'>下载</string>
    <string name='downloading'>正在下载...</string>
    <string name='downloading_res'>正在下载资源</string>
    <string name='downloading_db'>正在下载数据库</string>
    <string name='unzipping'>正在解压...</string>
    <string name='load_failed'>下载失败</string>
    <string name='load_succeed'>下载成功</string>
    <string name='clear_res_succeed'>清除资源成功</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="tip_input_nickname">请输入昵称！</string>
    <string name="modify_nickname_succeed">修改成功！</string>
    <string name="groupno">请输入群组号</string>
    <string name="visit">参观</string>
    <string name="railder">攻略</string>
    <string name="dada">达达</string>
    <string name="tourist_hengda">恒达旅行团</string>
    <string name="mycompany">我的同伴</string>
    <string name="comment_detail">评论详情</string>
    <string name="jump">跳过</string>
    <string name="education_digital">数码书优生优育</string>
    <string name="information_develop">信息技术发展历程</string>
    <string name="what_say">请问这个产品讲的是什么</string>
    <string name="write_comment">写评论...</string>
    <string name="speech">发 表</string>
    <string name="update">更新</string>
    <string name="current_edit">当前已是最新版：</string>
    <string name="open_time">开馆时间</string>
    <string name="down_success">下载成功</string>
    <string name="down_fail">下载失败</string>
    <string name="res_exist">部分资源已存在，是否要下载全部资源?</string>
    <string name="down_all">是否要下载全部资源？</string>
    <string name="load_verson">加载中</string>
    <string name="click_again">再次点击退出</string>
    <string name="net_error">网络不可用</string>
    <string name="feedback">意见反馈</string>
    <string name="leave_advice">再此留下您的宝贵意见，谢谢！</string>
    <string name="enter_group">请输入群组名称：</string>
    <string name="not_recognise">无法识别二维码</string>
    <string name="exist_group">退出群组</string>
    <string name="survey">问卷调查</string>
    <string name="no_comment">暂无评论</string>
    <string name="no_empty">输入内容不能为空</string>
    <string name="current_version">当前版本为:</string>
    <string name="location_where">您现在位于</string>
    <string name="swipfloor">是否切换到</string>
    <string name="learnmore">想了解更多，返回上一级列表查看</string>
    <string name="mylocation">我的位置</string>
    <string name="gxkj">广西科技馆</string>
    <string name="voice_pot">语音讲解点</string>
    <string name="vediopot">视频讲解点</string>
    <string name="neibpot">我附近的讲解点</string>
    <string name="iknow">我知道了</string>
    <string name="opreate">操作失败，请重试</string>
    <string name="othersigal">收到其他展区信号，是否进入其他展区</string>
    <string name="permission_camera">扫描二维码需要照相机权限</string>
    <string name="notice">提示</string>
    <string name="exhibit">展品</string>

</resources>
