<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@mipmap/tip_kuang"
    android:layout_gravity="center"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="25dp"
    android:layout_marginLeft="30dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/location_blue"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:paddingRight="10dp"
        android:textSize="16sp"
        android:textColor="#000"
        android:text="@string/voice_pot"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/location_video"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:paddingRight="15dp"
            android:textColor="#000"
            android:text="@string/vediopot"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/location_red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:textColor="#000"
            android:paddingRight="15dp"
            android:text="@string/neibpot"/>
        </LinearLayout>
    <TextView
        android:id="@+id/learnmore"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:textSize="16sp"
        android:textColor="#000"
        android:marqueeRepeatLimit="marquee_forever"
        android:ellipsize="marquee"
        android:scrollHorizontally="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:text="@string/learnmore"/>
    <Button
        android:id="@+id/iknow"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="3dp"
       android:layout_gravity="center"
        android:textColor="#E4A84E"
        android:textSize="18sp"
        android:text="@string/iknow"
        android:background="@mipmap/btn_kuang"/>
</LinearLayout>